--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,6 @@
 @import 'tailwindcss/utilities';
 
 
-body{
-  background-color: #FFFFFF;
-}
 
 @media (min-width: 769px) and (max-width: 1024px) {
   html {
@@ -51,4 +48,11 @@ body{
   width: 500px;
   height: 400px;
   border-radius: 2rem;
+}
+.skills-part-1 {
+  display: grid;
+  gap: 7rem;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 4rem 0;
+  height: fit-content;
 }
